--- a/views/add_client.ejs
+++ b/views/add_client.ejs
@@ -7,17 +7,17 @@
 
 <body>
     <form id="header">
-        <input type="image" formaction="cart_summary.html" src="imagenes/shopping_cart.png" id="shopping" width="30" height="30" />
-        <input type="image" formaction="sign_up.html" src="imagenes/exit.png" id="exit" width="30" height="30" />
+        <input type="image" formaction="cart_summary.html" src="images/title/shopping_cart.png" id="shopping" width="30" height="30" />
+        <input type="image" formaction="sign_up.html" src="images/title/exit.png" id="exit" width="30" height="30" />
     </form>
 
     <div class="contenedor">
         <form>
-            <input type="image" formaction="client.html" src="imagenes/go_back.png" id="back" width="30" height="30"/>    
+            <input type="image" formaction="client.html" src="images/title/go_back.png" id="back" width="30" height="30"/>    
         </form>    
 
         <center>
-            <img src="imagenes/new_client.png" width="224" height="113">        
+            <img src="images/title/new_client.png" width="224" height="113">        
         </center>
 
         <form>
