--- a/views/loan_details.ejs
+++ b/views/loan_details.ejs
@@ -8,17 +8,17 @@
 
 <body>
     <form id="header">
-        <input type="image" formaction="cart_summary.html" src="imagenes/shopping_cart.png" width="30" height="30" />
-        <input type="image" formaction="sign_up.html" src="imagenes/exit.png" width="30" height="30" />
+        <input type="image" formaction="cart_summary.html" src="images/title/shopping_cart.png" width="30" height="30" />
+        <input type="image" formaction="sign_up.html" src="images/title/exit.png" width="30" height="30" />
     </form>    
 
     <div class="contenedor">
         <form>
-            <input type="image" formaction="search_loans.html" id="back" src="imagenes/go_back.png" width="24" height="24"> 
+            <input type="image" formaction="search_loans.html" id="back" src="images/title/go_back.png" width="24" height="24"> 
         </form>
 
         <center>
-            <img src="imagenes/loan_details.png" width="280" height="100">        
+            <img src="images/title/loan_details.png" width="280" height="100">        
         </center>
 
         <form>
