--- a/views/search_loans.ejs
+++ b/views/search_loans.ejs
@@ -7,17 +7,17 @@
 
 <body>
     <form id="header">
-        <input type="image" formaction="cart_summary.html" src="imagenes/shopping_cart.png" width="30" height="30" />
-        <input type="image" formaction="sign_up.html" src="imagenes/exit.png" width="30" height="30" />
+        <input type="image" formaction="cart_summary.html" src="images/title/shopping_cart.png" width="30" height="30" />
+        <input type="image" formaction="sign_up.html" src="images/title/exit.png" width="30" height="30" />
     </form>    
 
     <div class="contenedor">
         <form>
-            <input type="image" formaction="loans.html" id="back" src="imagenes/go_back.png" width="24" height="24"> 
+            <input type="image" formaction="loans.html" id="back" src="images/title/go_back.png" width="24" height="24"> 
         </form>
 
         <center>
-            <img src="imagenes/search_loans.png" width="307" height="120">        
+            <img src="images/title/search_loans.png" width="307" height="120">        
         </center>
 
         <form>
@@ -35,28 +35,28 @@
 
         <form>
             <input type="text" id="field_1" class="field left" readonly>
-            <input type="image" id=view_edit formaction="loan_details.html" src="imagenes/view_edit.png" width="24" height="24"> <br>
+            <input type="image" id=view_edit formaction="loan_details.html" src="images/title/view_edit.png" width="24" height="24"> <br>
     
             <input type="text" id="field_2" class="field left" readonly>
-            <input type="image" id=view_edit formaction="loan_details.html" src="imagenes/view_edit.png" width="24" height="24"> <br>
+            <input type="image" id=view_edit formaction="loan_details.html" src="images/title/view_edit.png" width="24" height="24"> <br>
     
             <input type="text" id="field_3" class="field left" readonly>
-            <input type="image" id=view_edit formaction="loan_details.html" src="imagenes/view_edit.png" width="24" height="24"> <br>
+            <input type="image" id=view_edit formaction="loan_details.html" src="images/title/view_edit.png" width="24" height="24"> <br>
     
             <input type="text" id="field_4" class="field left" readonly>
-            <input type="image" id=view_edit formaction="loan_details.html" src="imagenes/view_edit.png" width="24" height="24"> <br>
+            <input type="image" id=view_edit formaction="loan_details.html" src="images/title/view_edit.png" width="24" height="24"> <br>
     
             <input type="text" id="field_5" class="field left" readonly>
-            <input type="image" id=view_edit formaction="loan_details.html" src="imagenes/view_edit.png" width="24" height="24"> <br>
+            <input type="image" id=view_edit formaction="loan_details.html" src="images/title/view_edit.png" width="24" height="24"> <br>
     
             <input type="text" id="field_6" class="field left" readonly>
-            <input type="image" id=view_edit formaction="loan_details.html" src="imagenes/view_edit.png" width="24" height="24"> <br>
+            <input type="image" id=view_edit formaction="loan_details.html" src="images/title/view_edit.png" width="24" height="24"> <br>
     
             <input type="text" id="field_6" class="field left" readonly>
-            <input type="image" id=view_edit formaction="loan_details.html" src="imagenes/view_edit.png" width="24" height="24"> <br>
+            <input type="image" id=view_edit formaction="loan_details.html" src="images/title/view_edit.png" width="24" height="24"> <br>
     
             <input type="text" id="field_8" class="field left" readonly>
-            <input type="image" id=view_edit formaction="loan_details.html" src="imagenes/view_edit.png" width="24" height="24"> <br>
+            <input type="image" id=view_edit formaction="loan_details.html" src="images/title/view_edit.png" width="24" height="24"> <br>
         </form>
     </div>
 </body>
