--- a/views/search_movie.ejs
+++ b/views/search_movie.ejs
@@ -8,21 +8,21 @@
 
 <body>
     <form id="header">
-        <input type="image" formaction="cart_summary.html" src="imagenes/shopping_cart.png" width="30" height="30" />
-        <input type="image" formaction="sign_up.html" src="imagenes/exit.png" width="30" height="30" />
+        <input type="image" formaction="cart_summary.html" src="images/title/shopping_cart.png" width="30" height="30" />
+        <input type="image" formaction="sign_up.html" src="images/title/exit.png" width="30" height="30" />
     </form>    
 
     <div class="contenedor">
         <form>
-            <input type="image" formaction="movies.html" id="back" src="imagenes/go_back.png" width="24" height="24"> 
+            <input type="image" formaction="movies.html" id="back" src="images/title/go_back.png" width="24" height="24"> 
         </form>
 
         <center>
-            <img src="imagenes/search_movie.png" width="307" height="120">        
+            <img src="images/title/search_movie.png" width="307" height="120">        
         </center>
 
         <form>
-            <img src="imagenes/search_icon.png" width="20" height="20">
+            <img src="images/title/search_icon.png" width="20" height="20">
             <input type="text" id="search" placeholder="search movie">
             <select id="by">
                 <option value="">By</option>
@@ -36,37 +36,37 @@
         </form>    
 
         <form>
-            <input type="image" id="add" src="imagenes/shopping_cart.png" width="24" height="24">
+            <input type="image" id="add" src="images/title/shopping_cart.png" width="24" height="24">
             <input type="text" id="field_1" class="field left" readonly>
-            <input type="image" id=view_edit formaction="edit_movie.html" src="imagenes/view_edit.png" width="24" height="24"> <br>
+            <input type="image" id=view_edit formaction="edit_movie.html" src="images/title/view_edit.png" width="24" height="24"> <br>
     
-            <input type="image" id="add" src="imagenes/shopping_cart.png" width="24" height="24">
+            <input type="image" id="add" src="images/title/shopping_cart.png" width="24" height="24">
             <input type="text" id="field_2" class="field left" readonly>
-            <input type="image" id=view_edit formaction="edit_movie.html" src="imagenes/view_edit.png" width="24" height="24"> <br>
+            <input type="image" id=view_edit formaction="edit_movie.html" src="images/title/view_edit.png" width="24" height="24"> <br>
     
-            <input type="image" id="add" src="imagenes/shopping_cart.png" width="24" height="24">
+            <input type="image" id="add" src="images/title/shopping_cart.png" width="24" height="24">
             <input type="text" id="field_3" class="field left" readonly>
-            <input type="image" id=view_edit formaction="edit_movie.html" src="imagenes/view_edit.png" width="24" height="24"> <br>
+            <input type="image" id=view_edit formaction="edit_movie.html" src="images/title/view_edit.png" width="24" height="24"> <br>
     
-            <input type="image" id="add" src="imagenes/shopping_cart.png" width="24" height="24">
+            <input type="image" id="add" src="images/title/shopping_cart.png" width="24" height="24">
             <input type="text" id="field_4" class="field left" readonly>
-            <input type="image" id=view_edit formaction="edit_movie.html" src="imagenes/view_edit.png" width="24" height="24"> <br>
+            <input type="image" id=view_edit formaction="edit_movie.html" src="images/title/view_edit.png" width="24" height="24"> <br>
     
-            <input type="image" id="add" src="imagenes/shopping_cart.png" width="24" height="24">
+            <input type="image" id="add" src="images/title/shopping_cart.png" width="24" height="24">
             <input type="text" id="field_5" class="field left" readonly>
-            <input type="image" id=view_edit formaction="edit_movie.html" src="imagenes/view_edit.png" width="24" height="24"> <br>
+            <input type="image" id=view_edit formaction="edit_movie.html" src="images/title/view_edit.png" width="24" height="24"> <br>
     
-            <input type="image" id="add" src="imagenes/shopping_cart.png" width="24" height="24">
+            <input type="image" id="add" src="images/title/shopping_cart.png" width="24" height="24">
             <input type="text" id="field_6" class="field left" readonly>
-            <input type="image" id=view_edit formaction="edit_movie.html" src="imagenes/view_edit.png" width="24" height="24"> <br>
+            <input type="image" id=view_edit formaction="edit_movie.html" src="images/title/view_edit.png" width="24" height="24"> <br>
     
-            <input type="image" id="add" src="imagenes/shopping_cart.png" width="24" height="24">
+            <input type="image" id="add" src="images/title/shopping_cart.png" width="24" height="24">
             <input type="text" id="field_6" class="field left" readonly>
-            <input type="image" id=view_edit formaction="edit_movie.html" src="imagenes/view_edit.png" width="24" height="24"> <br>
+            <input type="image" id=view_edit formaction="edit_movie.html" src="images/title/view_edit.png" width="24" height="24"> <br>
     
-            <input type="image" id="add" src="imagenes/shopping_cart.png" width="24" height="24">
+            <input type="image" id="add" src="images/title/shopping_cart.png" width="24" height="24">
             <input type="text" id="field_8" class="field left" readonly>
-            <input type="image" id=view_edit formaction="edit_movie.html" src="imagenes/view_edit.png" width="24" height="24"> <br>
+            <input type="image" id=view_edit formaction="edit_movie.html" src="images/title/view_edit.png" width="24" height="24"> <br>
         </form>
     </div>            
 </body>
