--- a/public/css/client.css
+++ b/public/css/client.css
@@ -63,7 +63,13 @@ body{
     opacity: 85%;
 }
 
-#header{
+#header1{
+    margin-left: 1400px;
+    margin-right: 10px;
+    margin-top: 20px;
+}
+
+#header2{
     margin-left: 1400px;
     margin-right: 10px;
     margin-top: 20px;
