--- a/public/css/shortcuts.css
+++ b/public/css/shortcuts.css
@@ -63,8 +63,14 @@ body{
     opacity: 85%;
 }
 
-#header{
+#header1{
     margin-left: 1400px;
+    margin-right: 10px;
+    margin-top: 20px;
+}
+
+#header2{
+    margin-left: 1410px;
     margin-right: 10px;
     margin-top: 20px;
 }
