--- a/views/cart_summary.ejs
+++ b/views/cart_summary.ejs
@@ -5,43 +5,54 @@
 <title>Shortcuts</title>
 </head>
 <body>
-    <form id="header">
-        <input type="image" formaction="cart_summary.html" src="imagenes/shopping_cart.png" width="30" height="30" />
-        <input type="image" formaction="sign_up.html" src="imagenes/exit.png" width="30" height="30" />
+    <form name="header" action="/admin/cart" method="get">
+        <input type="image" src="images/titles/shopping_cart.png" width="30" height="30" />
+    </form>    
+
+    <form name="header" action="/sign" method="get">
+        <input type="image" src="images/titles/exit.png" width="30" height="30" />
     </form>    
 
     <article id=mainContainer>
-        <form>
-            <input type="image" formaction="shortcuts.html" src="imagenes/home.png" id="home" width="30" height="30"/>
+
+        <form action="/admin/home" method="get">
+            <input type="image" src="images/title/home.png" name="home" width="30" height="30"/>
         </form> 
 
         <center>
-            <img src="imagenes/cart_summary.png" width="339" height="113">
+            <img src="images/title/cart_summary.png" width="339" height="113">
         </center>
         
         <article id="column1">
-            <form>
-                <h3>Items</h3>
-                <input type="text" id="item" readonly>
-                <input type="image" src="imagenes/eye.png" width="30" height="30"/>
-                <input type="image" src="imagenes/delete.png" width="30" height="30"/>
+            <h3>Items</h3>
+
+            <form action="" method="get">
+                <input type="text" name="item" readonly>
+            </form>
+            
+            <form action="" method="get">
+            <input type="image" src="images/title/eye.png" name="edit" width="30" height="30"/>
+            </form>
+
+            <form action="" method="">
+                <input type="image" src="images/title/delete.png" name="delete" width="30" height="30"/>
             </form>
         </article>    
              
         <article id="column2">
-            <form>
-                <input type="text" id="customer_id" readonly><br>
+            <form action="" method="get">
+                <input type="text" name="customer_id" readonly><br>
                 <select id="days">
                     <option value="">Number of days</option>
                 </select><br>                 
-                <input type="text" id="pre_total" value="Pre total:" readonly>
-                <input type="text" id="pre_total_bs" readonly><br>
-                <input type="text" id="discount" value="Discount:" readonly>
-                <input type="text" id="discount_p" readonly>
-                <input type="text" id="discount_bs" readonly><br>
-                <input type="text" id="total" value="Total:" readonly>
-                <input type="text" id="total_bs" readonly>
-                <button>Pay</button>
+                <input type="text" name="pre_total" value="Pre total:" readonly>
+                <input type="text" name="pre_total_bs" readonly><br>
+                <input type="text" name="discount" value="Discount:" readonly>
+                <input type="text" name="discount_p" readonly>
+                <input type="text" name="discount_bs" readonly><br>
+                <input type="text" name="total" value="Total:" readonly>
+                <input type="text" name="total_bs" readonly>
+                <button type="submit">Pay</button>
             </form>
         </article>
     </article>
