--- a/views/loans.ejs
+++ b/views/loans.ejs
@@ -5,13 +5,16 @@
 <title>Loan</title>
 </head>
 <body>
-    <form id="header">
-        <input type="image" formaction="cart_summary.html" src="imagenes/shopping_cart.png" width="30" height="30" />
-        <input type="image" formaction="sign_up.html" src="imagenes/exit.png" width="30" height="30" />
+    <form id="header" action="/admin/cart" method="get">
+        <input type="image" src="images/titles/shopping_cart.png" width="30" height="30" />
+    </form>    
+
+    <form id="header" action="/sign" method="get">
+        <input type="image" src="images/titles/exit.png" width="30" height="30" />
     </form>    
 
     <article id=sideContainer>
-        <img src="imagenes/retro_club.jpg" width="250" height="60"><br>
+        <img src="images/title/retro_club.jpg" width="250" height="60"><br>
         <input type="text" id="first" readonly><br>
         <input type="text" id="second" readonly><br>            
         <input type="text" id="third" readonly><br>            
@@ -19,10 +22,10 @@
 
     <article id=mainContainer>
         <form>
-            <input type="image" formaction="shortcuts.html" src="imagenes/home.png" id="home" width="30" height="30"/><br>
+            <input type="image" formaction="shortcuts.html" src="images/title/home.png" id="home" width="30" height="30"/><br>
 
             <center>
-                <img src="imagenes/loans.png" width="300" height="105">
+                <img src="images/title/loans.png" width="300" height="105">
             </center>
     
             <article id="container0">
@@ -30,9 +33,9 @@
         
             <button id="container1" formaction="search_loans.html">
                 <h3>Consult-Search-View</h3>
-                <img src="imagenes/search_icon.png" width="40px" height="40px">
-                <img src="imagenes/document.png" width="40px" height="40px">
-                <img src="imagenes/eye.png" width="40px" height="40px">
+                <img src="images/title/search_icon.png" width="40px" height="40px">
+                <img src="images/title/document.png" width="40px" height="40px">
+                <img src="images/title/eye.png" width="40px" height="40px">
             </button>
             
             <br>
