--- a/views/rules.ejs
+++ b/views/rules.ejs
@@ -54,13 +54,14 @@
             </form>
         
             <br>
+        <article>
 
+        <article id="container2">
             <form action="" method="POST">
-                <article id="container2">
-                    <h3>First day price</h3>
-                    <input type="text" id="first_day_price" name="first_day_price">Bs.</input>
-                </article>
+                <h3>First day price</h3>
+                <input type="text" id="first_day_price" name="first_day_price">Bs.</input>
             </form>
+        </article>
 
             <form action="" method="POST">
                 <article id="container3">
