--- a/views/loans.ejs
+++ b/views/loans.ejs
@@ -9,7 +9,7 @@
         <input type="image" src="images/titles/shopping_cart.png" width="30" height="30" />
     </form>    
 
-    <form id="header" action="/sign" method="get">
+    <form id="header" action="/logout" method="post">
         <input type="image" src="images/titles/exit.png" width="30" height="30" />
     </form>    
 
