--- a/views/shortcuts.ejs
+++ b/views/shortcuts.ejs
@@ -11,7 +11,7 @@
         <input type="image" src="/images/icons/shopping_cart.png" width="30" height="30" />
     </form>    
 
-    <form id="header2" name="header2" action="/sign" method="get">
+    <form id="header2" name="header2" action="/logout" method="post">
         <input type="image" src="/images/icons/exit.png" width="30" height="30" />
     </form>    
 
@@ -24,7 +24,7 @@
 
     <article id=mainContainer>
         <form action="/admin/home" method="get">
-            <input type="image" src="/images/titles/home.png" id="home" name="home" width="30" height="30"/><br>
+            <input type="image" src="/images/icons/home.png" id="home" name="home" width="30" height="30"/><br>
         </form>
 
         <center>
@@ -37,14 +37,14 @@
         <form action="/admin/customers" method="get">
             <button id="container1" name="container1">
                 <h3>Customers</h3>
-                <img src="/images/titles/people.png" width="60" height="60">
+                <img src="/images/icons/people.png" width="60" height="60">
             </button>
         </form>
 
         <form action="/admin/loans" method="get">
             <button id="container2" name="container2">
                 <h3>Loans</h3>
-                <img src="/images/titles/loan.png" width="60" height="60">
+                <img src="/images/icons/loan.png" width="60" height="60">
             </button>
         </form>
 
@@ -53,21 +53,21 @@
         <form action="/admin/cart" method="get">
             <button id="container3" name="container3">
                 <h3>Shopping</h3>
-                <img src="/images/titles/shopping_cart.png" width="60" height="60">
+                <img src="/images/icons/shopping_cart.png" width="60" height="60">
             </button>
         </form>
 
         <form action="/admin/movies" method="get">
             <button id="container4" name="container4">
                 <h3>Movies</h3>
-                <img src="/images/titles/cinema.png" width="60" height="60">
+                <img src="/images/icons/cinema.png" width="60" height="60">
             </button>    
         </form>
 
         <form action="/admin/rules" method="get">
             <button id="container5" name="container5">
                 <h3>Loan Rules</h3>
-                <img src="/images/titles/paper_rules.png" width="60" height="60">
+                <img src="/images/icons/paper_rules.png" width="60" height="60">
             </button>
         </form>
     </article>
