--- a/views/rules.ejs
+++ b/views/rules.ejs
@@ -10,7 +10,7 @@
         <input type="image" src="/images/icons/shopping_cart.png" width="30" height="30" />
     </form>    
 
-    <form id="header2" name="header2" action="/sign" method="GET">
+    <form id="header2" name="header2" action="/logout" method="post">
         <input type="image" src="/images/icons/exit.png" width="30" height="30" />
     </form> 
 
